--- a/_config.yml
+++ b/_config.yml
@@ -106,10 +106,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  name             : "세별"
+  avatar           : https://avatars3.githubusercontent.com/u/18353840?s=400&u=00f2e75b363b1b6feb2d529961e6cc4a577af8a9&v=4 # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "안녕하세요."
+  location         : "Korea, republic of"
   email            :
   links:
     - label: "Email"
